--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.3",
     "@nestjs/platform-express": "^9.0.3",
     "@nestjs/typeorm": "^9.0.0",
+    "cache-manager": "^4.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
@@ -37,6 +38,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.3",
+    "@types/cache-manager": "^4.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.5",
     "@types/node": "^18.0.4",
